--- a/templates/disciplina/adicionarDisciplina.html
+++ b/templates/disciplina/adicionarDisciplina.html
@@ -1,33 +1,32 @@
 {% extends 'home_base.html' %}{% block corpo %}{% load static %}
-<div class="col-md-6">
-  <div class="card" style="min-height: 484px">
-    <div class="card-header"><h3>Adicionar Nova Disciplina</h3></div>
-    <div class="card-body">
-      <form class="forms-sample">
-        <div class="form-group row">
-          <label for="exampleInputUsername2" class="col-sm-3 col-form-label">Username</label>
-          <div class="col-sm-9">
-            <input type="text" class="form-control" id="exampleInputUsername2" placeholder="Username" />
+<div class="row">
+  <div class="col-md-3"></div>
+  <div class="col-md-6">
+    <div class="card" style="min-height: 484px">
+      <div class="card-header"><h3>Adicionar Nova Disciplina</h3></div>
+      <div class="card-body">
+        <form class="forms-sample" action="{% url 'disciplina:nova-disciplina' %}" method="POST">
+          {% csrf_token %} {% autoescape on %}
+          <div class="form-group row">
+            <label for="exampleInputUsername2" class="col-sm-3 col-form-label">Nome</label>
+            <div class="col-sm-9">{{ form.nome }}{{ form.nome.errors }}</div>
           </div>
-        </div>
-        <div class="form-group row">
-          <label for="exampleInputEmail2" class="col-sm-3 col-form-label">Email</label>
-          <div class="col-sm-9">
-            <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Email" />
+          <div class="form-group row">
+            <label for="exampleInputEmail2" class="col-sm-3 col-form-label">Sigla</label>
+            <div class="col-sm-9">{{ form.sigla }}{{ form.sigla.errors }}</div>
           </div>
-        </div>
-        <div class="form-group row">
-          <label for="exampleInputMobile" class="col-sm-3 col-form-label">Mobile</label>
-          <div class="col-sm-9">
-            <input type="text" class="form-control" id="exampleInputMobile" placeholder="Mobile number" />
+          <div class="form-group row">
+            <label for="exampleInputMobile" class="col-sm-3 col-form-label">Codigo</label>
+            <div class="col-sm-9">{{ form.codigo }}{{ form.codigo.errors }}</div>
           </div>
-        </div>
 
-        <div class="form-group">
-          <div id="visitfromworld" style="width: 100%; height: 70px"></div>
-        </div>
-        <button type="submit" class="btn btn-primary mr-2">Submit</button>
-      </form>
+          <div class="form-group">
+            <div id="visitfromworld" style="width: 100%; height: 70px"></div>
+          </div>
+          <button type="submit" class="btn btn-primary mr-2" style="width: 100%">Salvar</button>
+          {% endautoescape %}
+        </form>
+      </div>
     </div>
   </div>
 </div>
