--- a/templates/home_base.html
+++ b/templates/home_base.html
@@ -1,3 +1,11 @@
+<!--
+@author [Gunza Ismael]
+@email [7ilip@gmail.com]
+@create date 2021-09-26 12:33:38
+@modify date 2021-09-26 13:08:55
+@desc [description]
+-->
+
 <!DOCTYPE html>
 {% load static %}
 <html class="no-js" lang="en">
@@ -87,8 +95,8 @@
                 <div class="nav-item has-sub">
                   <a href="javascript:void(0)"><i class="ik ik-layers"></i><span></span> </a>
                   <div class="submenu-content">
-                    <a href="#" class="menu-item">Inscrição</a>
-                    <a href="#" class="menu-item">Matricula</a>
+                    <a href="{% url 'aluno:adicionar-Inscricao' %}" class="menu-item">Nova Inscrição</a>
+                    <a href="#" class="menu-item">Nova Matricula</a>
                     <a href="#" class="menu-item">Confirmação de Matricula</a>
                     <div class="submenu-content">
                       <div class="nav-item has-sub">
