add forms inscrição

--- a/templates/home_base.html
+++ b/templates/home_base.html
@@ -2,7 +2,7 @@
 @author [Gunza Ismael]
 @email [7ilip@gmail.com]
 @create date 2021-09-26 12:33:38
-@modify date 2021-09-26 13:08:55
+@modify date 2021-09-26 13:29:21
 @desc [description]
 -->
 
@@ -75,7 +75,7 @@
       <div class="page-wrap">
         <div class="app-sidebar colored">
           <div class="sidebar-header">
-            <a class="header-brand" href="index.html">
+            <a class="header-brand" href="{% url 'home:home' %}">
               <div class="logo-img">
                 <!-- <img src="src/img/brand-white.svg" class="header-brand-img" alt="lavalite" />-->
               </div>
@@ -112,7 +112,7 @@
 
                 <div class="nav-lavel">FINANÇAS</div>
                 <div class="nav-item has-sub">
-                  <a href="#"><i class="ik ik-box"></i><span>Basic</span></a>
+                  <a href="#"><i class="ik ik-dollar-sign"></i><span></span></a>
                   <div class="submenu-content">
                     <a href="pages/ui/alerts.html" class="menu-item">Alerts</a>
                     <a href="pages/ui/badges.html" class="menu-item">Badges</a>
@@ -123,7 +123,7 @@
 
                 <div class="nav-lavel">ESTATISTICA</div>
                 <div class="nav-item has-sub">
-                  <a href="#"><i class="ik ik-box"></i><span>Basic</span></a>
+                  <a href="#"><i class="ik ik-trending-up"></i><span></span></a>
                   <div class="submenu-content">
                     <a href="pages/ui/alerts.html" class="menu-item">Alerts</a>
                     <a href="pages/ui/badges.html" class="menu-item">Badges</a>
@@ -134,7 +134,7 @@
 
                 <div class="nav-lavel">DOCENTE</div>
                 <div class="nav-item has-sub">
-                  <a href="#"><i class="ik ik-edit"></i><span>Forms</span></a>
+                  <a href="#"><i class="ik ik-user"></i><span></span></a>
                   <div class="submenu-content">
                     <a href="pages/form-components.html" class="menu-item">Components</a>
                     <a href="pages/form-addon.html" class="menu-item">Add-On</a>
@@ -144,7 +144,7 @@
 
                 <div class="nav-lavel">UTILIZADOR</div>
                 <div class="nav-item has-sub">
-                  <a href="#"><i class="ik ik-pie-chart"></i><span>Charts</span> </a>
+                  <a href="#"><i class="ik ik-user-check"></i><span></span> </a>
                   <div class="submenu-content">
                     <a href="pages/charts-chartist.html" class="menu-item active">Chartist</a>
                     <a href="pages/charts-flot.html" class="menu-item">Flot</a>
@@ -156,7 +156,7 @@
                 <div class="nav-lavel">CONFIGURAÇÃO</div>
 
                 <div class="nav-item has-sub">
-                  <a href="#"><i class="ik ik-lock"></i><span>Authentication</span></a>
+                  <a href="#"><i class="ik ik-settings"></i><span></span></a>
                   <div class="submenu-content">
                     <a href="pages/login.html" class="menu-item">Login</a>
                     <a href="pages/register.html" class="menu-item">Register</a>
