--- a/templates/aluno/adicionarInscricao.html
+++ b/templates/aluno/adicionarInscricao.html
@@ -2,6 +2,7 @@
 @author [Gunza Ismael]
 @email [7ilip@gmail.com]
 @create date 2021-09-26 13:03:25
-@modify date 2021-09-26 13:03:30
+@modify date 2021-09-27 13:19:39
 @desc [description]
 -->
+{% extends 'home_base.html' %}{% block corpo %}{% load static %} {% endblock %}
