--- a/templates/aluno/adicionarInscricao.html
+++ b/templates/aluno/adicionarInscricao.html
@@ -2,7 +2,91 @@
 @author [Gunza Ismael]
 @email [7ilip@gmail.com]
 @create date 2021-09-26 13:03:25
-@modify date 2021-09-27 13:19:39
+@modify date 2021-09-30 13:47:12
 @desc [description]
 -->
-{% extends 'home_base.html' %}{% block corpo %}{% load static %} {% endblock %}
+{% extends 'home_base.html' %}{% block corpo %}{% load static %}
+<div class="row">
+  <div class="col-md-12">
+    <div class="container">
+      <div class="">
+        <section>
+          <div class="wizard">
+            <div class="wizard-inner">
+              <div class="connecting-line"></div>
+
+              <ul class="nav nav-tabs" role="tablist">
+                <li role="presentation" class="active">
+                  <a href="#step1" data-toggle="tab" aria-controls="step1" role="tab" title="Step 1">
+                    <span class="round-tab">
+                      <i class="glyphicon glyphicon-folder-open"></i>
+                    </span>
+                  </a>
+                </li>
+
+                <li role="presentation" class="disabled">
+                  <a href="#step2" data-toggle="tab" aria-controls="step2" role="tab" title="Step 2">
+                    <span class="round-tab">
+                      <i class="glyphicon glyphicon-pencil"></i>
+                    </span>
+                  </a>
+                </li>
+
+                <li role="presentation" class="disabled">
+                  <a href="#step3" data-toggle="tab" aria-controls="step3" role="tab" title="Step 3">
+                    <span class="round-tab">
+                      <i class="glyphicon glyphicon-picture"></i>
+                    </span>
+                  </a>
+                </li>
+
+                <li role="presentation" class="disabled">
+                  <a href="#complete" data-toggle="tab" aria-controls="complete" role="tab" title="Complete">
+                    <span class="round-tab">
+                      <i class="glyphicon glyphicon-ok"></i>
+                    </span>
+                  </a>
+                </li>
+              </ul>
+            </div>
+
+            <form role="form">
+              <div class="tab-content">
+                <div class="tab-pane active" role="tabpanel" id="step1">
+                  <h3>Step 1</h3>
+                  <p>This is step 1</p>
+                  <ul class="list-inline pull-right">
+                    <li><button type="button" class="btn btn-primary next-step">Save and continue</button></li>
+                  </ul>
+                </div>
+                <div class="tab-pane" role="tabpanel" id="step2">
+                  <h3>Step 2</h3>
+                  <p>This is step 2</p>
+                  <ul class="list-inline pull-right">
+                    <li><button type="button" class="btn btn-default prev-step">Previous</button></li>
+                    <li><button type="button" class="btn btn-primary next-step">Save and continue</button></li>
+                  </ul>
+                </div>
+                <div class="tab-pane" role="tabpanel" id="step3">
+                  <h3>Step 3</h3>
+                  <p>This is step 3</p>
+                  <ul class="list-inline pull-right">
+                    <li><button type="button" class="btn btn-default prev-step">Previous</button></li>
+                    <li><button type="button" class="btn btn-default next-step">Skip</button></li>
+                    <li><button type="button" class="btn btn-primary btn-info-full next-step">Save and continue</button></li>
+                  </ul>
+                </div>
+                <div class="tab-pane" role="tabpanel" id="complete">
+                  <h3>Complete</h3>
+                  <p>You have successfully completed all steps.</p>
+                </div>
+                <div class="clearfix"></div>
+              </div>
+            </form>
+          </div>
+        </section>
+      </div>
+    </div>
+  </div>
+</div>
+{% endblock %}
