--- a/templates/aluno/adicionarInscricao.html
+++ b/templates/aluno/adicionarInscricao.html
@@ -2,7 +2,7 @@
 @author [Gunza Ismael]
 @email [7ilip@gmail.com]
 @create date 2021-09-26 13:03:25
-@modify date 2021-10-11 13:07:22
+@modify date 2021-10-12 05:47:49
 @desc [description]
 -->
 {% extends 'home_base.html' %}{% block corpo %}{% load static %}
@@ -11,7 +11,7 @@
     <div class="card">
       <div class="card-header"><h3>Inscrição do Utente</h3></div>
       <div class="card-body">
-        <form id="regForm" class="forms-sample">
+        <form id="regForm" class="forms-sample" action="{% url 'aluno:adicionar-Inscricao' %}" method="POST">
           {% csrf_token %} {% autoescape on %}
           <div class="all-steps" id="all-steps"><span class="step"></span> <span class="step"></span> <span class="step"></span> <span class="step"></span></div>
           <div class="tab">
@@ -124,22 +124,22 @@
             <div class="row">
               <div class="col-md-4">
                 <div class="form-group">
-                  <label for="exampleInputEmail3">Habilitação Literaria</label>
+                  <label for="exampleInputEmail3">Classe a Frequentar</label>
                   {{ form2.habilitacao_literaria }} {{ form.habilitacao_literaria.errors }}
                 </div>
               </div>
 
               <div class="col-md-4">
                 <div class="form-group">
-                  <label for="exampleInputEmail3">Ano de Conclusão</label>
-                  {{ form2.instituicao_origem }} {{ form2.instituicao_origem.errors }}
+                  <label for="curso">Curso a Frequentar</label>
+                  {{ form2.curso }} {{ form.curso.errors }}
                 </div>
               </div>
 
               <div class="col-md-4">
                 <div class="form-group">
-                  <label for="exampleInputEmail3">Media de Conclusão</label>
-                  {{ form2.media_conclusao }} {{ form2.media_conclusao.errors }}
+                  <label for="exampleInputEmail3">Periodo</label>
+                  {{ form2.periodo }} {{ form2.periodo.errors }}
                 </div>
               </div>
             </div>
@@ -147,24 +147,13 @@
             <div class="row">
               <div class="col-md-4">
                 <div class="form-group">
-                  <label for="exampleInputEmail3">Curso a Frequentar</label>
-                  {{ form2.curso }} {{ form.curso.errors }}
-                </div>
-              </div>
-              <div class="col-md-4">
-                <div class="form-group">
-                  <label for="exampleInputEmail3">Periodo</label>
-                  {{ form2.periodo }} {{ form2.periodo.errors }}
-                </div>
-              </div>
-              <div class="col-md-4">
-                <div class="form-group">
-                  <label for="exampleInputEmail3">Data</label>
+                  <label for="exampleInputEmail3">Data de Inscrição</label>
                   {{ form2.data_inscricao }} {{ form2.data_inscricao.errors }}
                 </div>
               </div>
             </div>
           </div>
+          <div class="tab">Foto</div>
 
           <div style="overflow: auto" id="nextprevious">
             <div style="float: right">
