--- a/templates/home_base.html
+++ b/templates/home_base.html
@@ -2,7 +2,7 @@
 @author [Gunza Ismael]
 @email [7ilip@gmail.com]
 @create date 2021-09-26 12:33:38
-@modify date 2021-10-11 12:32:51
+@modify date 2021-10-12 05:23:02
 @desc [description]
 -->
 
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="{% static '/plugins/datatables.net-bs4/css/dataTables.bootstrap4.min.css' %}" />
     <link rel="stylesheet" href="{% static '/plugins/tempusdominus-bootstrap-4/build/css/tempusdominus-bootstrap-4.min.css' %}" />
     <link rel="stylesheet" href="{% static '/plugins/weather-icons/css/weather-icons.min.css' %}" />
-    <link rel="stylesheet" href="{% static '/plugins/c3/c3.min.css' %}" />
+    <!--<link rel="stylesheet" href="{% static '/plugins/c3/c3.min.css' %}" />-->
     <link rel="stylesheet" href="{% static '/plugins/owl.carousel/dist/assets/owl.carousel.min.css' %}" />
     <link rel="stylesheet" href="{% static '/plugins/owl.carousel/dist/assets/owl.theme.default.min.css' %}" />
     <link rel="stylesheet" href="{% static '/dist/css/theme.min.css' %}" />
