--- a/templates/home_base.html
+++ b/templates/home_base.html
@@ -2,7 +2,7 @@
 @author [Gunza Ismael]
 @email [7ilip@gmail.com]
 @create date 2021-09-26 12:33:38
-@modify date 2021-10-12 05:23:02
+@modify date 2021-10-12 09:01:35
 @desc [description]
 -->
 
@@ -62,8 +62,8 @@
                   ><img class="avatar" src="{% static 'img/user.jpg' %}" alt=""
                 /></a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
-                  <a class="dropdown-item" href="profile.html"><i class="ik ik-user dropdown-icon"></i> Profile</a>
-                  <a class="dropdown-item" href="login.html"><i class="ik ik-power dropdown-icon"></i> Logout</a>
+                  <a class="dropdown-item" href="#"><i class="ik ik-user dropdown-icon"></i> Profile</a>
+                  <a class="dropdown-item" href="#"><i class="ik ik-power dropdown-icon"></i> Logout</a>
                 </div>
               </div>
             </div>
@@ -191,6 +191,7 @@
     <script src="{% static '/src/js/vendor/jquery-3.3.1.min.js' %}"></script>
     <script src="{% static '/plugins/popper.js/dist/umd/popper.min.js' %}"></script>
     <script src="{% static '/plugins/bootstrap/dist/js/bootstrap.min.js' %}"></script>
+    <script src="{% static '/dist/js/webcam.js' %}"></script>
 
     <script src="{% static '/plugins/perfect-scrollbar/dist/perfect-scrollbar.min.js' %}"></script>
     <script src="{% static '/plugins/screenfull/dist/screenfull.js' %}"></script>
@@ -199,8 +200,8 @@
     <script src="{% static '/plugins/datatables.net-responsive/js/dataTables.responsive.min.js' %}"></script>
     <script src="{% static '/plugins/datatables.net-responsive-bs4/js/responsive.bootstrap4.min.js' %}"></script>
     <script src="{% static '/plugins/moment/moment.js' %}"></script>
-    <script src="{% static '/plugins/d3/dist/d3.min.js' %}"></script>
-    <script src="{% static '/plugins/c3/c3.min.js' %}"></script>
+    <!--<script src="{% static '/plugins/d3/dist/d3.min.js' %}"></script>
+    <script src="{% static '/plugins/c3/c3.min.js' %}"></script>-->
     <script src="{% static '/dist/js/tables.js' %}"></script>
     <script src="{% static 'dist/js/widgets.js' %}"></script>
     <script src="{% static '/dist/js/wizerd.js' %}"></script>
