--- a/templates/home_base.html
+++ b/templates/home_base.html
@@ -2,7 +2,7 @@
 @author [Gunza Ismael]
 @email [7ilip@gmail.com]
 @create date 2021-09-26 12:33:38
-@modify date 2021-10-12 09:01:35
+@modify date 2021-10-12 10:00:20
 @desc [description]
 -->
 
@@ -203,10 +203,42 @@
     <!--<script src="{% static '/plugins/d3/dist/d3.min.js' %}"></script>
     <script src="{% static '/plugins/c3/c3.min.js' %}"></script>-->
     <script src="{% static '/dist/js/tables.js' %}"></script>
-    <script src="{% static 'dist/js/widgets.js' %}"></script>
+    <!--<script src="{% static 'dist/js/widgets.js' %}"></script>-->
     <script src="{% static '/dist/js/wizerd.js' %}"></script>
     <script src="{% static '/dist/js/theme.min.js' %}"></script>
+    <script language="JavaScript">
+      // Configure a few settings and attach camera
+      function configure() {
+        Webcam.set({
+          width: 240,
+          height: 240,
+          image_format: "jpeg",
+          jpeg_quality: 90,
+        });
+        Webcam.attach("#my_camera");
+      }
 
+      function take_snapshot() {
+        // take snapshot and get image data
+        Webcam.snap(function (data_uri) {
+          // display results in page
+          document.getElementById("results").innerHTML = '<img id="imageprev" src="' + data_uri + '"/>';
+          document.getElementById("result").innerHTML = '<img id="imageprev"  class="rounded-circle" src="' + data_uri + '"/>';
+        });
+
+        Webcam.reset();
+      }
+
+      function saveSnap() {
+        // Get base64 value from <img id='imageprev'> source
+        var base64image = document.getElementById("imageprev").src;
+
+        Webcam.upload(base64image, "upload.php", function (code, text) {
+          console.log("Save successfully");
+          //console.log(text);
+        });
+      }
+    </script>
     {% load sweetify %} {% sweetify %}
   </body>
 </html>
