--- a/templates/aluno/reciboInscricao.html
+++ b/templates/aluno/reciboInscricao.html
@@ -2,13 +2,13 @@
 @author [Gunza Ismael]
 @email [7ilip@gmail.com]
 @create date 2021-10-12 10:24:31
-@modify date 2021-10-12 10:39:06
+@modify date 2021-10-14 01:52:56
 @desc [description]
 -->
 {% extends 'home_base.html' %}{% block corpo %}{% load static %}
 <div class="card">
   <div class="card-header">
-    <h3 class="d-block w-100">Escola X-Sofia <small class="float-right">Date: 12/11/2018</small></h3>
+    <h3 class="d-block w-100">Recibo de Inscrição <small class="float-right">Date: 12/11/2018</small></h3>
   </div>
   <div class="card-body">
     <div class="row invoice-info">
@@ -17,15 +17,19 @@
       </div>
       <div class="col-sm-4 invoice-col">
         <address>
-          <strong>Recibo de Inscrição</strong>
+          <strong>
+            <h5>Minísterio da Educação</h5>
+
+            <h5>Escola Nº 1025</h5>
+          </strong>
         </address>
       </div>
       <div class="col-sm-4 invoice-col">
-        <b>Invoice #007612</b><br />
+        <b></b><br />
         <br />
-        <b>Order ID:</b> 4F3S8J<br />
-        <b>Payment Due:</b> 2/22/2014<br />
-        <b>Account:</b> 968-34567
+        <b>Numero:</b> 4F3S8J<br />
+        <b>Estado:</b> 2/22/2014<br />
+        <b>Telefone:</b> 968-34567
       </div>
     </div>
 
