--- a/templates/home_base.html
+++ b/templates/home_base.html
@@ -2,7 +2,7 @@
 @author [Gunza Ismael]
 @email [7ilip@gmail.com]
 @create date 2021-09-26 12:33:38
-@modify date 2021-10-12 10:00:20
+@modify date 2021-10-14 08:25:19
 @desc [description]
 -->
 
@@ -192,6 +192,8 @@
     <script src="{% static '/plugins/popper.js/dist/umd/popper.min.js' %}"></script>
     <script src="{% static '/plugins/bootstrap/dist/js/bootstrap.min.js' %}"></script>
     <script src="{% static '/dist/js/webcam.js' %}"></script>
+    <script src="{% static '/dist/js/html2pdf.bundle.min.js' %}"></script>
+    <script src="{% static '/dist/js/generate-html-pdf.js' %}"></script>
 
     <script src="{% static '/plugins/perfect-scrollbar/dist/perfect-scrollbar.min.js' %}"></script>
     <script src="{% static '/plugins/screenfull/dist/screenfull.js' %}"></script>
