--- a/templates/aluno/reciboInscricao.html
+++ b/templates/aluno/reciboInscricao.html
@@ -2,11 +2,17 @@
 @author [Gunza Ismael]
 @email [7ilip@gmail.com]
 @create date 2021-10-12 10:24:31
-@modify date 2021-10-14 01:52:56
+@modify date 2021-10-14 08:22:59
 @desc [description]
 -->
 {% extends 'home_base.html' %}{% block corpo %}{% load static %}
-<div class="card">
+<div class="row no-print">
+  <div class="col-12">
+    <button type="button" onclick="convertHtmlPdf()" class="btn btn-primary pull-right" style="margin-right: 5px"><i class="fa fa-download"></i> Imprimir - PDF</button>
+  </div>
+</div>
+<p></p>
+<div class="card" id="reciboInscricao">
   <div class="card-header">
     <h3 class="d-block w-100">Recibo de Inscrição <small class="float-right">Date: 12/11/2018</small></h3>
   </div>
@@ -106,11 +112,11 @@
         </div>
       </div>
     </div>
-    <div class="row no-print">
+    <!--<div class="row no-print">
       <div class="col-12">
         <button type="button" class="btn btn-primary pull-right" style="margin-right: 5px"><i class="fa fa-download"></i> Imprimir - PDF</button>
       </div>
-    </div>
+    </div>-->
   </div>
 </div>
 
