--- a/templates/home_base.html
+++ b/templates/home_base.html
@@ -2,7 +2,7 @@
 @author [Gunza Ismael]
 @email [7ilip@gmail.com]
 @create date 2021-09-26 12:33:38
-@modify date 2021-10-14 08:25:19
+@modify date 2021-10-15 00:55:54
 @desc [description]
 -->
 
@@ -193,7 +193,6 @@
     <script src="{% static '/plugins/bootstrap/dist/js/bootstrap.min.js' %}"></script>
     <script src="{% static '/dist/js/webcam.js' %}"></script>
     <script src="{% static '/dist/js/html2pdf.bundle.min.js' %}"></script>
-    <script src="{% static '/dist/js/generate-html-pdf.js' %}"></script>
 
     <script src="{% static '/plugins/perfect-scrollbar/dist/perfect-scrollbar.min.js' %}"></script>
     <script src="{% static '/plugins/screenfull/dist/screenfull.js' %}"></script>
@@ -208,6 +207,8 @@
     <!--<script src="{% static 'dist/js/widgets.js' %}"></script>-->
     <script src="{% static '/dist/js/wizerd.js' %}"></script>
     <script src="{% static '/dist/js/theme.min.js' %}"></script>
+    <script src="{% static '/dist/js/help/extra.js' %}"></script>
+    <script src="{% static '/dist/js/help/request.js' %}"></script>
     <script language="JavaScript">
       // Configure a few settings and attach camera
       function configure() {
@@ -218,27 +219,6 @@
           jpeg_quality: 90,
         });
         Webcam.attach("#my_camera");
-      }
-
-      function take_snapshot() {
-        // take snapshot and get image data
-        Webcam.snap(function (data_uri) {
-          // display results in page
-          document.getElementById("results").innerHTML = '<img id="imageprev" src="' + data_uri + '"/>';
-          document.getElementById("result").innerHTML = '<img id="imageprev"  class="rounded-circle" src="' + data_uri + '"/>';
-        });
-
-        Webcam.reset();
-      }
-
-      function saveSnap() {
-        // Get base64 value from <img id='imageprev'> source
-        var base64image = document.getElementById("imageprev").src;
-
-        Webcam.upload(base64image, "upload.php", function (code, text) {
-          console.log("Save successfully");
-          //console.log(text);
-        });
       }
     </script>
     {% load sweetify %} {% sweetify %}
