chance file picture

--- a/templates/home_base.html
+++ b/templates/home_base.html
@@ -2,7 +2,7 @@
 @author [Gunza Ismael]
 @email [7ilip@gmail.com]
 @create date 2021-09-26 12:33:38
-@modify date 2021-10-15 00:55:54
+@modify date 2021-10-16 21:08:54
 @desc [description]
 -->
 
@@ -207,7 +207,7 @@
     <!--<script src="{% static 'dist/js/widgets.js' %}"></script>-->
     <script src="{% static '/dist/js/wizerd.js' %}"></script>
     <script src="{% static '/dist/js/theme.min.js' %}"></script>
-    <script src="{% static '/dist/js/help/extra.js' %}"></script>
+    <script src="{% static '/dist/js/help/foto.js' %}"></script>
     <script src="{% static '/dist/js/help/request.js' %}"></script>
     <script language="JavaScript">
       // Configure a few settings and attach camera
