--- a/templates/aluno/adicionarInscricao.html
+++ b/templates/aluno/adicionarInscricao.html
@@ -2,7 +2,7 @@
 @author [Gunza Ismael]
 @email [7ilip@gmail.com]
 @create date 2021-09-26 13:03:25
-@modify date 2021-10-16 12:09:53
+@modify date 2021-10-16 21:40:52
 @desc [description]
 -->
 {% extends 'home_base.html' %}{% block corpo %}{% load static %}
@@ -11,7 +11,7 @@
     <div class="card">
       <div class="card-header"><h3>Inscrição do Utente</h3></div>
       <div class="card-body">
-        <form id="regForm" class="forms-sample" action="{% url 'aluno:adicionar-Inscricao' %}" method="POST" enctype="multipart/form-data">
+        <form class="forms-sample" action="{% url 'aluno:adicionar-Inscricao' %}" method="POST" enctype="multipart/form-data">
           {% csrf_token %} {% autoescape on %}
           <div class="all-steps" id="all-steps"><span class="step"></span> <span class="step"></span> <span class="step"></span> <span class="step"></span></div>
           <div class="tab">
